--- a/baseline_code/mask_save.ipynb
+++ b/baseline_code/mask_save.ipynb
@@ -30,7 +30,7 @@
     "#         print(f\"'mmseg' kernel is exists.\")\n",
     "#         !jupyter kernelspec remove mmseg -y\n",
     "#         print(\"removed kernel\")\n",
-    "        \n",
+    "\n",
     "# !python -m ipykernel install --user --name mmseg --display-name \"mmseg\"\n",
     "# !jupyter kernelspec list\n",
     "\n",
@@ -413,9 +413,8 @@
    "hash": "d36e052b391be8c28b05838ade06426769a29575d5fe21a7bc69c7dec0c04c06"
   },
   "kernelspec": {
-   "display_name": "mmseg",
-   "language": "python",
-   "name": "mmseg"
+   "display_name": "Python 3.7.11 64-bit ('segmentation': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
