mmseg config file & Stochastic weight averaging

--- a/baseline_code/baseline_fcn_resnet50.ipynb
+++ b/baseline_code/baseline_fcn_resnet50.ipynb
@@ -1449,10 +1449,10 @@
  "metadata": {
   "hide_input": false,
   "interpreter": {
-   "hash": "d36e052b391be8c28b05838ade06426769a29575d5fe21a7bc69c7dec0c04c06"
+   "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.11 64-bit ('segmentation': conda)",
+   "display_name": "Python 3.8.12 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -1465,7 +1465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.12"
   },
   "toc": {
    "base_numbering": 1,
